--- a/proyecto-isa/secciones/historia.html
+++ b/proyecto-isa/secciones/historia.html
@@ -1,49 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Mira nuestra variedad de productos y escoge el diseño que mas te guste. Indumentaria para dama.">
+    <meta name="description" content="sublimaciones,lycra,estampados,ropa">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos/estilos.css">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/a39fc431b3.js" crossorigin="anonymous"></script>
+    <title>Historia</title>
 </head>
+
 <body>
-    
+
 
     <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="./productos.html">Productos</a>
-                </li>
-                <li>
-                    <a href="./como_llegar.html">Como llegar</a>
-                </li>
-                <li>
-                    <a href="./historia.html">Historia</a>
-                </li>
-                <li>
-                    <a href="./contacto.html">Contacto</a>
-                </li>
-            </ul>
-
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Creacion Isa</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="n index_anim">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="n productos_anim">
+                            <a class="nav-link" href="./productos.html">Productos</a>
+                        </li>
+                        <li class="n comollegar_anim">
+                            <a class="nav-link" href="./como_llegar.html">Como LLegar</a>
+                        </li>
+                        <li class="n historia_anim">
+                            <a class="nav-link" href="./historia.html">Historia</a>
+                        </li>
+                        <li class="n contacto_anim">
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
     <main>
-        <h1>Historia</h1>  
+        <h1>Historia</h1>
+
+        <section>
+            <p class="historia">Tienda de ropa para dama, ubicada en flores con todas las prendas de distintos modelos
+                para todas las estaciones
+                es un emprendimiento familiar en busca de crecimiento y llegar a clientes en busca de nuestras prendas.
+
+            </p>
+        </section>
     </main>
 
     <footer>
         <h2>Nuestas redes Sociales</h2>
         <div>
-        <a href="https://www.instagram.com/"target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
-        <a href="https://es-la.facebook.com/"target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
-        <a href="https://www.whatsapp.com/?lang=es"target="_blank"><i class="fa-brands fa-whatsapp"></i>Whatsapp</a>
-    </div>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
+            <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i
+                    class="fa-brands fa-whatsapp"></i>Whatsapp</a>
+        </div>
     </footer>
 </body>
+
 </html>
