--- a/proyecto-isa/secciones/historia.html
+++ b/proyecto-isa/secciones/historia.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Mira nuestra variedad de productos y escoge el diseño que mas te guste. Indumentaria para dama.">
-    <meta name="description" content="sublimaciones,lycra,estampados,ropa">
+    <meta name="keywords" content="historia,sobre nosotros,sublimaciones,lycra,estampados,ropa,indumentaria, mujer,pantalon,remera,tapados,abrigos,talles,invierno,verano">
+    <meta name="description" content="Somos fabricantes de indumentaria femenina desde 2018. Buscamos diseñar clásicos y atemporales para todos los días. Nos distinguimos por la calidad y el detalle de cada una de nuestras prendas.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="shortcut icon" href="../img/favi1.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a39fc431b3.js" crossorigin="anonymous"></script>
-    <title>Historia</title>
+    <title>Creaciones Ysa | Historia</title>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
 
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+            <section class="container-fluid">
                 <a class="navbar-brand" href="#">Creacion Isa</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -44,7 +45,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </section>
         </nav>
     </header>
 
@@ -55,7 +56,8 @@
             <p class="historia">Tienda de ropa para dama, ubicada en flores con todas las prendas de distintos modelos
                 para todas las estaciones
                 es un emprendimiento familiar en busca de crecimiento y llegar a clientes en busca de nuestras prendas.
-
+                Somos fabricantes de indumentaria femenina desde 2018. Buscamos diseñar clásicos y atemporales para
+                todos los días. Nos distinguimos por la calidad y el detalle de cada una de nuestras prendas.
             </p>
         </section>
     </main>
