--- a/proyecto-isa/index.html
+++ b/proyecto-isa/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="Mira nuestra variedad de productos y escoge el diseño que mas te guste. Indumentaria para dama.">
-  <meta name="description" content="sublimaciones,lycra,estampados,ropa">
+  <meta name="keywords"
+    content="sublimaciones,lycra,estampados,ropa,inicio,indumentaria, mujer,pantalon,remera,tapados,abrigos,talles,invierno,verano">
+  <meta name="description"
+    content="Mira nuestra variedad de productos y escoge el diseño que mas te guste. Indumentaria para dama en todos los talles y variedades. Los modelos varian dependiendo la estacion.">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./estilos/estilos.css">
+  <link rel="shortcut icon" href="./img/favi1.png" type="image/x-icon">
   <script src="https://kit.fontawesome.com/a39fc431b3.js" crossorigin="anonymous"></script>
-  <title>Isa</title>
+  <title>Creaciones Ysa | Remeras sublimadas - Personalizadas </title>
 </head>
 
 <body>
+
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
+      <section class="container-fluid">
         <a class="navbar-brand" href="#">Creacion Isa</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,31 +46,97 @@
             </li>
           </ul>
         </div>
-      </div>
+      </section>
     </nav>
   </header>
 
   <main>
 
     <p class="logo">Creaciones Isa</p>
-    <div class="letraindex">
+    <section class="letraindex">
       <h1>Remeras</h1>
       <h2>Sublimaciones para dama</h2>
       <h3>Descubrí las principales tendencias en moda para mujer para Argentina segun las principales capitales de
         la moda internacional.</h3>
-      <img src="./img/remera3.jpg" alt="remera3">
-    </div>
+    </section>
 
+    <div class="container text-center m-0 mb-3">
+      <div class="row">
+        <div class="col-xs-12 col-md 9 col-lg-9">
+          <div id="carouselExampleIndicators"
+            class="carousel slide border-top border-end border-danger border-3 rounded m-2">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                aria-label="Slide 6"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+                aria-label="Slide 7"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"
+                aria-label="Slide 8"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8"
+                aria-label="Slide 9"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9"
+                aria-label="Slide 10"></button>
+
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./img/remera.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/lycra.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/cuero.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/remera2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/remera3.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/remera4.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md 3 col-lg-3 mt-5 text-center ">
+          <h3 class="mb-5  font-weight-bold "> Lo mas nuevo en indumentaria para mujer! </h3>
+          <p class="font-weight-2">Creaciones ysa, donde vas a encontrar todo tipo de modelo y talles para dama. Nos
+            amoldamos a los diferentes gustos, diseños personalizados y mas. Ropa para los distintas estaciones. </p>
+        </div>
+      </div>
+    </div>
   </main>
 
 
   <footer>
     <h2>Nuestas redes Sociales</h2>
-    <div>
+    <section>
       <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
       <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
       <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i class="fa-brands fa-whatsapp"></i>Whatsapp</a>
-    </div>
+    </section>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
