--- a/proyecto-isa/secciones/como_llegar.html
+++ b/proyecto-isa/secciones/como_llegar.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Mira nuestra variedad de productos y escoge el diseño que mas te guste. Indumentaria para dama.">
-    <meta name="description" content="sublimaciones,lycra,estampados,ropa">
+    <meta name="keywords" content="categoría ubicacion, locaclizacion, ubicacion,donde nos encontramos, como llegar,lycra,estampados,ropa,inicio,indumentaria, mujer,pantalon,remera,tapados,abrigos,talles,invierno,verano">
+    <meta name="description" content="Contamos con un local fisico. Estamos ubicados en campana 230,zona avellaneda,capital federal">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="shortcut icon" href="../img/favi1.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a39fc431b3.js" crossorigin="anonymous"></script>
-    <title>Como llegar</title>
+    <title>Creaciones Ysa | Como llegar</title>
 </head>
 
 <body>
 
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+            <section class="container-fluid">
                 <a class="navbar-brand" href="#">Creacion Isa</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -43,24 +44,26 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </section>
         </nav>
     </header>
 
     <main>
-        <div class="lugar">
+        <section class="lugar">
             <h1>Como llegar</h1>
 
             <h2 class="Direccion">Direccion </h2>
             <h3 class="altura">Campana 230, Galeria supercampana</h3>
-        </div>
+        </section>
       
-        <div>
+        <section>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3282.9851879139865!2d-58.4757691!3d-34.6298146!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9922048b2f1%3A0x8e43d29a2c066e35!2sSuper%20Campana!5e0!3m2!1ses!2sar!4v1677539998745!5m2!1ses!2sar"
                 width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        </section>
+
+        
     </main>
 
     <footer>
