--- a/proyecto-isa/secciones/contacto.html
+++ b/proyecto-isa/secciones/contacto.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Mira nuestra variedad de productos y escoge el diseño que mas te guste. Indumentaria para dama.">
-    <meta name="description" content="sublimaciones,lycra,estampados,ropa">
+    <meta name="keywords" content="apellidos,nombre,correo electrónico,categoría contacto, mensaje,sublimaciones,lycra,estampados,ropa,inicio,indumentaria, mujer,pantalon,remera,tapados,abrigos,talles,invierno,verano">
+    <meta name="description" content="Este espacio es para dejar toda la informacion de contacto, asi nosostros podemos tener mayor comunciacion con el cliente.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="shortcut icon" href="../img/favi1.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a39fc431b3.js" crossorigin="anonymous"></script>
-    <title>Contacto</title>
+    <title>Creaciones Ysa | Contacto</title>
 </head>
 
 <body>
 
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+            <section class="container-fluid">
                 <a class="navbar-brand" href="#">Creacion Isa</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -43,14 +44,14 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </section>
         </nav>
     </header>
 
     <main>
         <h1>contacto</h1>
         <h2>Formulario</h2>
-        <div class="contenedorForm">
+        <section class="contenedorForm">
             <form action="" class="formulario">
                 <fieldset>
                     <legend>Contanos de vos</legend>
@@ -109,7 +110,7 @@
                 </fieldset>
 
             </form>
-        </div>
+        </section>
 
     </main>
 
