--- a/proyecto-isa/secciones/productos.html
+++ b/proyecto-isa/secciones/productos.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Mira nuestra variedad de productos y escoge el diseño que mas te guste. Indumentaria para dama.">
-    <meta name="description" content="sublimaciones,lycra,estampados,ropa">
+    <meta name="keywords" content="talles especiales,modelos,productos,lycra,estampados,ropa,pantalones,indumentaria, mujer,abrigos,remera,tapados,talles,invierno,verano">
+    <meta name="description" content="Descubrí la nueva colección! Ropa de mujer de moda al mejor precio y calidad. Renovate con prendas como remeras, camisas, pantalones, abrigos y más.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="shortcut icon" href="../img/favi1.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a39fc431b3.js" crossorigin="anonymous"></script>
-    <title>Productos</title>
+    <title>Creaciones Ysa | Productos </title>
 </head>
 
 <body>
 
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+            <section class="container-fluid">
                 <a class="navbar-brand" href="#">Creacion Isa</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -43,7 +44,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </section>
         </nav>
     </header>
 
@@ -59,13 +60,13 @@
 
 
 
-        <div class="grilla">
+        <article class="grilla">
             <header class="border tela">tela</header>
             <section class="border sublimada">sublimada</section>
             <section class="border gamusa">gamusa</section>
             <section class="border licra">licra</section>
             <section class="border cuero">cuero</section>
-        </div>
+        </article>
 
     </main>
 
