--- a/proyecto-isa/index.html
+++ b/proyecto-isa/index.html
@@ -22,7 +22,8 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <section class="container-fluid">
-        <a class="navbar-brand" href="#">Creacion Isa</a>
+        <a class="navbar-brand" href="./index.html">Creacion Isa
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -90,22 +91,22 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./img/remera.jpg" class="d-block w-100" alt="...">
+                <img src="./img/remera.jpg" class="d-block w-100" alt="remera sublimada">
               </div>
               <div class="carousel-item">
-                <img src="./img/lycra.jpg" class="d-block w-100" alt="...">
+                <img src="./img/lycra.jpg" class="d-block w-100" alt="remera lycra">
               </div>
               <div class="carousel-item">
-                <img src="./img/cuero.jpg" class="d-block w-100" alt="...">
+                <img src="./img/cuero.jpg" class="d-block w-100" alt="remera cuero">
               </div>
               <div class="carousel-item">
-                <img src="./img/remera2.jpg" class="d-block w-100" alt="...">
+                <img src="./img/remera2.jpg" class="d-block w-100" alt="remera corazon sublimada">
               </div>
               <div class="carousel-item">
-                <img src="./img/remera3.jpg" class="d-block w-100" alt="...">
+                <img src="./img/remera3.jpg" class="d-block w-100" alt="estampado remera">
               </div>
               <div class="carousel-item">
-                <img src="./img/remera4.jpg" class="d-block w-100" alt="...">
+                <img src="./img/remera4.jpg" class="d-block w-100" alt="remera estampada">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -131,11 +132,12 @@
 
 
   <footer>
-    <h2>Nuestas redes Sociales</h2>
+    <p class="texto-footer">Nuestas redes Sociales</p>
     <section>
       <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
       <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
       <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i class="fa-brands fa-whatsapp"></i>Whatsapp</a>
+      <p class="copyright">© 2023 Creaciones ysa</p>
     </section>
   </footer>
 
