--- a/proyecto-isa/secciones/como_llegar.html
+++ b/proyecto-isa/secciones/como_llegar.html
@@ -19,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <section class="container-fluid">
-                <a class="navbar-brand" href="#">Creacion Isa</a>
+                <a class="navbar-brand" href="../index.html">Creacion Isa</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +55,7 @@
             <h2 class="Direccion">Direccion </h2>
             <h3 class="altura">Campana 230, Galeria supercampana</h3>
         </section>
-      
+
         <section>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3282.9851879139865!2d-58.4757691!3d-34.6298146!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9922048b2f1%3A0x8e43d29a2c066e35!2sSuper%20Campana!5e0!3m2!1ses!2sar!4v1677539998745!5m2!1ses!2sar"
@@ -63,19 +63,18 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
 
-        
+
     </main>
 
     <footer>
-        <h2>Nuestas redes Sociales</h2>
-        <div>
+        <p class="texto-footer">Nuestas redes Sociales</p>
+        <section>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
             <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
-            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i
-                    class="fa-brands fa-whatsapp"></i>Whatsapp</a>
-        </div>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i class="fa-brands fa-whatsapp"></i>Whatsapp</a>
+            <p class="copyright">© 2023 Creaciones ysa</p>
+        </section>
     </footer>
-
 </body>
 
 </html>
