--- a/proyecto-isa/secciones/historia.html
+++ b/proyecto-isa/secciones/historia.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <section class="container-fluid">
-                <a class="navbar-brand" href="#">Creacion Isa</a>
+                <a class="navbar-brand" href="../index.html">Creacion Isa</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -63,13 +63,13 @@
     </main>
 
     <footer>
-        <h2>Nuestas redes Sociales</h2>
-        <div>
+        <p class="texto-footer">Nuestas redes Sociales</p>
+        <section>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
             <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
-            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i
-                    class="fa-brands fa-whatsapp"></i>Whatsapp</a>
-        </div>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i class="fa-brands fa-whatsapp"></i>Whatsapp</a>
+            <p class="copyright">© 2023 Creaciones ysa</p>
+        </section>
     </footer>
 </body>
 
