--- a/proyecto-isa/secciones/productos.html
+++ b/proyecto-isa/secciones/productos.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="talles especiales,modelos,productos,lycra,estampados,ropa,pantalones,indumentaria, mujer,abrigos,remera,tapados,talles,invierno,verano">
     <meta name="description" content="Descubrí la nueva colección! Ropa de mujer de moda al mejor precio y calidad. Renovate con prendas como remeras, camisas, pantalones, abrigos y más.">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link rel="shortcut icon" href="../img/favi1.png" type="image/x-icon">
@@ -19,8 +20,8 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <section class="container-fluid">
-                <a class="navbar-brand" href="#">Creacion Isa</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <a class="navbar-brand" href="../index.html">Creacion Isa</a>
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,10 +29,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="n index_anim">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="n productos_anim">
-                            <a class="nav-link" href="./productos.html">Productos</a>
+                            <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
                         </li>
                         <li class="n comollegar_anim">
                             <a class="nav-link" href="./como_llegar.html">Como LLegar</a>
@@ -48,37 +49,95 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main-productos">
         <h1>Productos</h1>
 
-        <ul>
-            <h2>Las telas que trabajamos: </h2>
-            <li> Modal </li>
-            <li> Spum </li>
-            <li> Friza </li>
-        </ul>
+        <div class="contenedor-productos">
+            <div class="producto">
+                <img class="producto-imagen" src="../img/art-4.jpg" alt="art-4">
+                <div class="producto-detalle">
+                    <h2 class="producto-titulo">Remera Jersey </h2>
+                    <h3 class="producto-precio">$ 1300</h3>
+                    <button class="producto-agregar">agregar</button>
+                </div>
+            </div>
 
+            <div class="producto">
+                <img class="producto-imagen" src="../img/art-22.jpg" alt="art-22">
+                <div class="producto-detalle">
+                    <h2 class="producto-titulo">Buzo friza estampado </h2>
+                    <h3 class="producto-precio">$ 1600</h3>
+                    <button class="producto-agregar">agregar</button>
+                </div>
+            </div>
 
+            <div class="producto">
+                <img class="producto-imagen" src="../img/art-24.jpg" alt="art-24">
+                <div class="producto-detalle">
+                    <h2 class="producto-titulo">Polera lanilla </h2>
+                    <h3 class="producto-precio">$ 1400</h3>
+                    <button class="producto-agregar">agregar</button>
+                </div>
+            </div>
 
-        <article class="grilla">
-            <header class="border tela">tela</header>
-            <section class="border sublimada">sublimada</section>
-            <section class="border gamusa">gamusa</section>
-            <section class="border licra">licra</section>
-            <section class="border cuero">cuero</section>
-        </article>
+            <div class="producto">
+                <img class="producto-imagen" src="../img/art-28.jpg" alt="art-28">
+                <div class="producto-detalle">
+                    <h2 class="producto-titulo">remera lanilla sublimado </h2>
+                    <h3 class="producto-precio">$ 1200</h3>
+                    <button class="producto-agregar">agregar</button>
+                </div>
+            </div>
 
+            <div class="producto">
+                <img class="producto-imagen" src="../img/art-65.jpg" alt="art-65">
+                <div class="producto-detalle">
+                    <h2 class="producto-titulo">Remera jaspeado</h2>
+                    <h3 class="producto-precio">$ 1200</h3>
+                    <button class="producto-agregar">agregar</button>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto-imagen" src="../img/art-70.jpg" alt="art-70">
+                <div class="producto-detalle">
+                    <h2 class="producto-titulo">Remera spum sublimada </h2>
+                    <h3 class="producto-precio">$ 1000</h3>
+                    <button class="producto-agregar">agregar</button>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto-imagen" src="../img/art-4.jpg" alt="art-4">
+                <div class="producto-detalle">
+                    <h2 class="producto-titulo">Remera Jersey </h2>
+                    <h3 class="producto-precio">$ 1300</h3>
+                    <button class="producto-agregar">agregar</button>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img class="producto-imagen" src="../img/art-4.jpg" alt="art-4">
+                <div class="producto-detalle">
+                    <h2 class="producto-titulo">Remera Jersey </h2>
+                    <h3 class="producto-precio">$ 1300</h3>
+                    <button class="producto-agregar">agregar</button>
+                </div>
+            </div>
+
+        </div>
     </main>
 
     <footer>
-        <h2>Nuestas redes Sociales</h2>
-        <div>
+        <p class="texto-footer">Nuestas redes Sociales</p>
+        <section>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
             <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
-            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i
-                    class="fa-brands fa-whatsapp"></i>Whatsapp</a>
-        </div>
+            <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i class="fa-brands fa-whatsapp"></i>Whatsapp</a>
+            <p class="copyright">© 2023 Creaciones ysa</p>
+        </section>
     </footer>
+
 </body>
 
 </html>
