--- a/proyecto-isa/secciones/como_llegar.html
+++ b/proyecto-isa/secciones/como_llegar.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Contamos con un local fisico. Estamos ubicados en campana 230,zona avellaneda,capital federal">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../img/favi1.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a39fc431b3.js" crossorigin="anonymous"></script>
     <title>Creaciones Ysa | Como llegar</title>
@@ -56,7 +57,7 @@
             <h3 class="altura">Campana 230, Galeria supercampana</h3>
         </section>
 
-        <section>
+        <section class="mapa">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3282.9851879139865!2d-58.4757691!3d-34.6298146!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9922048b2f1%3A0x8e43d29a2c066e35!2sSuper%20Campana!5e0!3m2!1ses!2sar!4v1677539998745!5m2!1ses!2sar"
                 width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
