--- a/proyecto-isa/secciones/contacto.html
+++ b/proyecto-isa/secciones/contacto.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Este espacio es para dejar toda la informacion de contacto, asi nosostros podemos tener mayor comunciacion con el cliente.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../img/favi1.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a39fc431b3.js" crossorigin="anonymous"></script>
     <title>Creaciones Ysa | Contacto</title>
@@ -50,20 +51,50 @@
 
     <main>
         <h1>contacto</h1>
-        <h2>Formulario</h2>
+        <h2 class="formulario-letra">Formulario</h2>
 
-        <form action="">
-            <section class="form-register">
-                <h3>Formulario de registro</h3>
-                <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su nombre">
-                <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese su apellido">
-                <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su correo">
-                <input class="controls" type="password" name="correo" id="correo" placeholder="Ingrese su contraseña">
-                <p>Estoy de acuerdo con <a href="">Terminos y condiciones</a></p>
-                <input class="botons" type="submit" value="Registrar">
-                <p><a href="">¿Ya tengo cuenta?</a></p>
-            </section>
-        </form>
+
+        <div class="content">
+            <h1 class="logo-contact">Contact <span>Us</span></h1>
+            <div class="contact-wrapper">
+                <div class="contact-form">
+                    <h3>Contact us</h3>
+                    <form action="">
+                        <p>
+                            <label for="nombre">Nombre</label>
+                            <input type="text" name="nombre" id="nombre">
+                        </p>
+                        <p>
+                            <label>Email</label>
+                            <input type="email" name="email">
+                        </p>
+                        <p>
+                            <label>telefono</label>
+                            <input type="tel" name="tel">
+                        </p>
+                        <p class="block">
+                            <label >Mensaje</label>
+                            <textarea name="mensaje" rows="3"></textarea>
+                        </p>
+                        <p class="block">
+                            <button type="submit">enviar</button>
+                        </p>
+                    </form>
+                </div>
+                <div class="contact-info">
+                    <h4>Mas info</h4>
+                    <ul>
+                        <li><i class="fas fa-map-market-alt"></i>Baker street</li>
+                        <li><i class="fas fa-phone"></i>11111 11111 11111</li>
+                        <li><i class="fas fa-envelope-open-text"></i>ysa@gmai.com</li>
+                    </ul>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quam earum, vitae explicabo voluptatum deserunt?
+                    </p>
+                    <p>Company.com</p>
+                </div>
+            </div>
+        </div>
 
     </main>
 
