--- a/proyecto-isa/secciones/historia.html
+++ b/proyecto-isa/secciones/historia.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Somos fabricantes de indumentaria femenina desde 2018. Buscamos diseñar clásicos y atemporales para todos los días. Nos distinguimos por la calidad y el detalle de cada una de nuestras prendas.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../img/favi1.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a39fc431b3.js" crossorigin="anonymous"></script>
     <title>Creaciones Ysa | Historia</title>
@@ -52,7 +53,7 @@
     <main>
         <h1>Historia</h1>
 
-        <section>
+        <section class="contenedor-historia">
             <p class="historia">Tienda de ropa para dama, ubicada en flores con todas las prendas de distintos modelos
                 para todas las estaciones
                 es un emprendimiento familiar en busca de crecimiento y llegar a clientes en busca de nuestras prendas.
