--- a/proyecto-isa/secciones/productos.html
+++ b/proyecto-isa/secciones/productos.html
@@ -10,6 +10,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../img/favi1.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a39fc431b3.js" crossorigin="anonymous"></script>
     <title>Creaciones Ysa | Productos </title>
@@ -50,7 +51,7 @@
     </header>
 
     <main class="main-productos">
-        <h1>Productos</h1>
+        <h1 class="producto-palabra">Productos</h1>
 
         <div class="contenedor-productos">
             <div class="producto">
