pre-entrega-ticona

--- a/proyecto-isa/secciones/contacto.html
+++ b/proyecto-isa/secciones/contacto.html
@@ -55,10 +55,10 @@
 
 
         <div class="content">
-            <h1 class="logo-contact">Contact <span>Us</span></h1>
+            <h1 class="logo-contact">Conocenos <span>mas</span></h1>
             <div class="contact-wrapper">
                 <div class="contact-form">
-                    <h3>Contact us</h3>
+                    <h3>Contacto</h3>
                     <form action="">
                         <p>
                             <label for="nombre">Nombre</label>
@@ -69,7 +69,7 @@
                             <input type="email" name="email">
                         </p>
                         <p>
-                            <label>telefono</label>
+                            <label>Telefono</label>
                             <input type="tel" name="tel">
                         </p>
                         <p class="block">
@@ -85,8 +85,8 @@
                     <h4>Mas info</h4>
                     <ul>
                         <li><i class="fas fa-map-market-alt"></i>Baker street</li>
-                        <li><i class="fas fa-phone"></i>11111 11111 11111</li>
-                        <li><i class="fas fa-envelope-open-text"></i>ysa@gmai.com</li>
+                        <li><i class="fas fa-phone"></i>1120236490</li>
+                        <li><i class="fas fa-envelope-open-text"></i>ysacanser70@gmai.com</li>
                     </ul>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quam earum, vitae explicabo voluptatum deserunt?
@@ -104,6 +104,7 @@
           <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
           <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
           <a href="https://www.whatsapp.com/?lang=es" target="_blank"><i class="fa-brands fa-whatsapp"></i>Whatsapp</a>
+          <p class="copyright">© 2023 Creaciones ysa</p>
         </section>
       </footer>
 </body>
