--- a/proyecto-isa/index.html
+++ b/proyecto-isa/index.html
@@ -145,6 +145,7 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
   </script>
 
+<script src="main.js"></script>
 </body>
 
 </html>
